# Unidade-1-SO

./: CMakeLists.txt  README.md
matrizes/: matriz_A_100X100.txt  matriz_A_200X200.txt  matriz_A_300X300.txt  matriz_A_400X400.txt  matriz_A_500X500.txt  matriz_A_600X600.txt  matriz_A_700X700.txt  matriz_A_800X800.txt  matriz_A_900X900.txt  matriz_B_100X100.txt  matriz_B_200X200.txt  matriz_B_300X300.txt  matriz_B_400X400.txt  matriz_B_500X500.txt  matriz_B_600X600.txt  matriz_B_700X700.txt  matriz_B_800X800.txt  matriz_B_900X900.txt
resultados/: matriz_resultado_threads_100x100_resultados.txt  matriz_resultado_threads_600x600_resultados.txt
src/: criar_matrizes.cpp  matrizes_sequencial.cpp  matrizes_threads.cpp  sequencial
utils/: utils.cpp  utils.h
